<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.alimepatia.ui.auth.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.alimepatia.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboardFragment_to_alimentosFragment"
            app:destination="@id/alimentosFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_equipeFragment"
            app:destination="@id/equipeFragment" />
    </fragment>

    <fragment
        android:id="@+id/alimentosFragment"
        android:name="com.example.alimepatia.ui.alimentos.AlimentosFragment"
        android:label="@string/alimentos_title"
        tools:layout="@layout/fragment_alimentos" />

    <fragment
        android:id="@+id/equipeFragment"
        android:name="com.example.alimepatia.ui.equipe.EquipeFragment"
        android:label="@string/equipe_title"
        tools:layout="@layout/fragment_equipe" />

    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.example.alimepatia.ui.perfil.PerfilFragment"
        android:label="Usuário"
        tools:layout="@layout/fragment_perfil" />
</navigation>
